# gale-synth

./: .gitignore  CMakeLists.txt  README.md
extra/lv2/: gale.ttl  manifest.ttl  manifest.ttl.in
src/core/: project.cpp  project.hpp
src/core/node/: connection.cpp  connection.hpp  node.cpp  node.hpp  port.hpp
src/core/node/oscillator/: simple_oscillator.cpp  simple_oscillator.hpp
src/core/node/output/: stream_output.hpp
src/core/project/: pipeline.cpp  pipeline.hpp  project.cpp  project.hpp
src/core/project/node/: connection.cpp  connection.hpp  constants.hpp  node.cpp  node.hpp  node_play_context.hpp  port.cpp  port.hpp
src/core/project/node/oscillator/: simple_oscillator.cpp  simple_oscillator.hpp
src/core/project/node/output/: stream_output.cpp  stream_output.hpp
src/core/sound/: sound_data.hpp
src/gui/: app.cpp  app.hpp
src/gui/app/: app.cpp  app.hpp
src/gui/app/project/: project.cpp  project.hpp  project_node.cpp  project_node.hpp
src/gui/project/: project.cpp  project.hpp  project_node.hpp
src/gui/sound/output/: plugin_sound_output.cpp  plugin_sound_output.hpp  sound_output.cpp  sound_output.hpp  sound_output_impl.hpp  soundio_sound_output.cpp  soundio_sound_output.hpp
src/gui/windows/window_main/: connections_widget.cpp  connections_widget.hpp  constants.hpp  new_connection_widget.cpp  new_connection_widget.hpp  node_container_widget.cpp  node_container_widget.hpp  node_port_widget.cpp  node_port_widget.hpp  node_widget.cpp  node_widget.hpp  project_area.cpp  project_area.hpp  window_main.cpp  window_main.hpp
src/ports/lv2/: CMakeLists.txt
src/ports/native/: CMakeLists.txt  main.c  main.cpp
src/synth/app/: app.cpp  app.hpp
src/synth/app/project/: project.cpp  project.hpp  project_node.cpp  project_node.hpp
src/synth/core/: project.hpp
src/synth/core/node/: connection.cpp  connection.hpp  node.cpp  node.hpp  node_ui.cpp  port.cpp  port.hpp
src/synth/core/node/oscillator/: simple_oscillator.cpp  simple_oscillator.hpp
src/synth/core/node/output/: stream_output.cpp  stream_output.hpp
src/synth/project/: connection.hpp  node.cpp  node.hpp  port.cpp  port.hpp  project.cpp  project.hpp
src/synth/project/node/: connection.cpp  connection.hpp  node.cpp  node.hpp  node_ondraw.cpp  node_ui.cpp  port.cpp  port.hpp
src/synth/project/node/oscillator/: simple_oscillator.cpp  simple_oscillator.hpp
src/synth/project/node/output/: stream_output.cpp  stream_output.hpp
src/synth/ui/window_main/: connections_widget.cpp  connections_widget.hpp  constants.hpp  menu.c  menu.cpp  menu.h  new_connection_widget.hpp  node_container_widget.cpp  node_container_widget.hpp  node_port_widget.cpp  node_port_widget.hpp  node_widget.cpp  node_widget.hpp  project_area.cpp  project_area.hpp  window_main.c  window_main.cpp  window_main.h  window_main.hpp
src/targets/lv2/: CMakeLists.txt  lv2_ui.cpp  main.cpp
src/targets/native/: CMakeLists.txt  main.cpp
